--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -20,13 +20,17 @@ jobs:
     - name: Install repo2docker
       run: |
         python -m pip install --upgrade pip
-        pip install jupyter-repo2docker 
+        pip install jupyter-repo2docker six
 
     - name: Generate image name
       run: |
         chmod +x ./.github/workflows/generate_image_name
         echo "IMAGE_NAME=$(./.github/workflows/generate_image_name ${{ github.repository }} ${{ github.sha }} ${{ secrets.IMAGE_PREFIX }})" >> $GITHUB_ENV 
     
+    - name: Test value of IMAGE_NAME var
+      run: |
+        echo $IMAGE_NAME
+
     - name: Configure Azure Credentials
       uses: azure/docker-login@v1
       with:
