--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install repo2docker
       run: |
         python -m pip install --upgrade pip
-        python3 -m pip install jupyter-repo2docker
+        pip install jupyter-repo2docker six chardet
 
     - name: Generate image name
       run: |
