Fix github actions workflow

--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -27,11 +27,15 @@ jobs:
         chmod +x ./.github/workflows/generate_image_name
         echo "IMAGE_NAME=$(./.github/workflows/generate_image_name ${{ github.repository }} ${{ github.sha }} ${{ secrets.IMAGE_PREFIX }})" >> $GITHUB_ENV 
     
-    - name: Build docker image
+    - name: Test value of IMAGE_NAME var
+      run: |
+        echo $IMAGE_NAME
+
+    - name: Configure Azure Credentials
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.ACR_NAME }}.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-      run: |
+    - run: |
         jupyter-repo2docker --ref ${{ github.sha }} --image $IMAGE_NAME --no-clean --no-run --user-name jovyan --user-id 1000 --push ${{ github.repository }}
