Fix github actions workflow

--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -34,9 +34,8 @@ jobs:
     - name: Configure Azure Credentials
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ secrets.ACR_NAME }}.azurecr.io
+        login-server: ${{ secrets.ACR_NAME }}
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
     - run: |
-        jupyter-repo2docker --ref ${{ github.sha }} --image $IMAGE_NAME --no-clean --no-run --user-name jovyan --user-id 1000 .
-        docker push $IMAGE_NAME
+        jupyter-repo2docker --ref ${{ github.sha }} --image $IMAGE_NAME --no-clean --no-run --user-name jovyan --user-id 1000 --push .
