--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -31,11 +31,7 @@ jobs:
       run: |
         echo $IMAGE_NAME
 
-    - name: Configure Azure Credentials
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ secrets.ACR_NAME }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
-    - run: |
+    - name: Build image
+      run: |
+        docker login ${{ secrets.ACR_NAME }} -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
         jupyter-repo2docker --ref ${{ github.sha }} --image $IMAGE_NAME --no-clean --no-run --user-name jovyan --user-id 1000 --push .
