Fix github actions workflow

--- a/.github/workflows/build-publish-docker-image.yml
+++ b/.github/workflows/build-publish-docker-image.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Configure Azure Credentials
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ secrets.ACR_NAME }}
+        login-server: ${{ secrets.ACR_NAME }}.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
 
